Design changes for mobile view

--- a/CMS-USER-FRONTEND/public/index.html
+++ b/CMS-USER-FRONTEND/public/index.html
@@ -25,6 +25,18 @@
       max-height: 200px; /* Adjust the height as needed */
       overflow-y: auto;
     }
+
+    .alert-container {
+      width: 500px;
+      text-align: center;
+    }
+
+    /* Adjust width for mobile devices */
+    @media (max-width: 576px) {
+      .alert-container {
+        width: 400px;
+      }
+    }
   </style>
 </head>
 <body>
