--- a/CMS-USER-FRONTEND/public/index.html
+++ b/CMS-USER-FRONTEND/public/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- developer edit css -->
     <link href="style.css" rel="stylesheet">
+    <!-- <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'> -->
     <style>
         @media (max-width: 768px) {
             h3 {
