--- a/CMS-USER-FRONTEND/public/index.html
+++ b/CMS-USER-FRONTEND/public/index.html
@@ -15,8 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- developer edit css -->
     <link href="style.css" rel="stylesheet">
-    <!-- <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -28,7 +28,7 @@
         }
         
         .table-container {
-            max-height: 200px;
+            max-height: 700px;
             /* Adjust the height as needed */
             overflow-y: auto;
         }
@@ -52,6 +52,12 @@
                 padding: 20px;
             }
         }
+        .div-container {
+            max-height: 200px;
+            /* Adjust the height as needed */
+            overflow-y: auto;
+        }
+        
     </style>
 </head>
 
